@@ -1,3 +1,5 @@
+31.dec (ws)
+      - copy/paste of lyrics and chord symbols in passages
 30.dec (ws)
       - fixed copy/paste lyrics and chord symbols
       - fix crash when starting empty and then create new score
